Fix: make casing consistent in the payloads (#171)
### What

Make casing consistent in the payloads.

### Why

Address #166
